# SuperAudioPlayer

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/zjf/superaudioplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/zjf/superaudioplayer/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/zjf/superaudioplayer/: ExampleUnitTest.java
myplayer/: CMakeLists.txt  build.gradle
myplayer/libs/arm64-v8a/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
myplayer/libs/armeabi-v7a/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
myplayer/libs/x86/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
myplayer/libs/x86_64/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
myplayer/src/androidTest/java/com/example/myplayer/: ExampleInstrumentedTest.java
myplayer/src/main/cpp/: AndroidLog.h  JfAudio.cpp  JfAudio.h  JfCallJava.cpp  JfCallJava.h  JfFFmpeg.cpp  JfFFmpeg.h  JfPlayStatus.cpp  JfPlayStatus.h  JfQueue.cpp  JfQueue.h  JfVideo.cpp  JfVideo.h  native-lib.cpp
myplayer/src/main/java/com/example/myplayer/bean/: JfTimeInfoBean.java
myplayer/src/main/java/com/example/myplayer/listener/: JfOnCompleteListener.java  JfOnErrorListener.java  JfOnLoadingListener.java  JfOnPauseResumeListener.java  JfOnPreparedListener.java  JfOnTimeInfoListener.java
myplayer/src/main/java/com/example/myplayer/log/: JfLog.java
myplayer/src/main/java/com/example/myplayer/opengl/: JfGLSurfaceView.java  JfRender.java  JfShaderUtil.java
myplayer/src/main/java/com/example/myplayer/player/: JfPlayer.java
myplayer/src/main/java/com/example/myplayer/util/: JfTimeUtil.java  JfVideoSupUtil.java
myplayer/src/main/res/raw/: fragment_mediacodec.glsl  fragment_yuv.glsl
myplayer/src/test/java/com/example/myplayer/: ExampleUnitTest.java
